--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,7 +19,7 @@ jobs:
           pip install -r requirements.txt
       - name: execute py script # run the run.py to get the latest data
         run: |
-          python run.py
+          python main.py
         env:
           client_id: ${{ secrets.CLIENT_ID }}
           client_secret: ${{ secrets.CLIENT_SECRET }}
