--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,11 +13,11 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8 #install the python needed
+          python-version: 3.10 # install the python needed
       - name: python requirements
         run: |
           pip install -r requirements.txt
-      - name: execute py script # run the run.py to get the latest data
+      - name: execute python script
         run: |
           python main.py
         env:
