--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,7 +13,7 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.10 # install the python needed
+          python-version: '3.10' # install the python needed
       - name: python requirements
         run: |
           pip install -r requirements.txt
