Complete instruction overhaul and a lot of code cleanup

--- a/playlists/daily.toml
+++ b/playlists/daily.toml
@@ -7,14 +7,11 @@ daily = true
     randomize = true
 
 [[instructions]]
-    type = "user_top_tracks"
+    type = "top_tracks"
     term = 'short'
     amount = 50
 
 [[instructions]]
-    type = "user_top_tracks"
+    type = "top_tracks"
     term = 'medium'
     amount = 10
-
-[[instructions]]
-    type = "clear_duplicates"
