--- a/playlists/daily.toml
+++ b/playlists/daily.toml
@@ -4,7 +4,7 @@ daily = true
 [[instructions]]
     type = "saved_tracks"
     amount = 30
-    randomize = true
+    randomize = false
 
 [[instructions]]
     type = "top_tracks"
