--- a/playlists/daily.toml
+++ b/playlists/daily.toml
@@ -1,6 +1,8 @@
-name = 'My Current Bops'
-daily = true
 clear_duplicates = true
+region = 'US'
+
+[upload]
+    name = 'My Current Bops'
 
 [[instructions]]
     type = "saved_tracks"
