--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,7 +19,7 @@ jobs:
           pip install -r requirements.txt
       - name: execute python script
         run: |
-          python main.py
+          python main.py -a
         env:
           client_id: ${{ secrets.CLIENT_ID }}
           client_secret: ${{ secrets.CLIENT_SECRET }}
