--- a/playlists/daily.toml
+++ b/playlists/daily.toml
@@ -1,5 +1,7 @@
 clear_duplicates = true
 region = 'US'
+# These are from my wake up playlist
+remove_artists = ['Tracy Island', 'melodysheep']
 
 [upload]
     name = 'My Current Bops'
