Clean up a bit of sorting

--- a/playlists/grooving.toml
+++ b/playlists/grooving.toml
@@ -4,8 +4,9 @@ explicit = false
 
 [audio_sort]
     method = 'traveling'
-    chunks = 25
+    chunks = 40
     random_offset = true
+    attributes = ['energy', 'valence']
 
 [upload]
     name = "Grooving"
