--- a/playlists/current_bops_and_recs.toml
+++ b/playlists/current_bops_and_recs.toml
@@ -4,20 +4,11 @@ region = 'US'
 # These are from my wake up playlist
 remove_artists = ['Tracy Island', 'melodysheep']
 
-#[audio_sort]
-#    method = 'traveling'
-#    chunks = 25
-#    random_offset = true
-
-[sort_together]
+[similar]
     tracks = {type = "playlist_tracks", name = 'My Current Bops'}
 
 [upload]
     name = 'My Current Bops with Spice'
-
-#[[instructions]]
-#    type = "playlist_tracks"
-#    name = 'My Current Bops'
 
 [[instructions]]
     type = "generate"
