--- a/playlists/recs_and_bops_bopping.toml
+++ b/playlists/recs_and_bops_bopping.toml
@@ -11,6 +11,10 @@ region = 'US'
     lower = 0.5
     upper = 1
 
+[danceability]
+    lower = 0.5
+    upper = 1
+
 [[instructions]]
     type = "playlist_tracks"
     name = "spotify:playlist:09XtrnnCzAKqOvsqDderH0"
