--- a/playlists/math_guitar.toml
+++ b/playlists/math_guitar.toml
@@ -19,7 +19,7 @@ explicit = false
     type = "recommendations"
     artists = ["spotify:artist:1v7B6ZWa7QRQS3knn3Jvf4", "spotify:artist:1v7B6ZWa7QRQS3knn3Jvf4"]
 
-    max_speechiness = 0.3
+    min_instrumentalness = 0.5
     limit = 50
     max_energy = 0.6
     min_acousticness = 0.5
@@ -42,7 +42,7 @@ explicit = false
     type = "recommendations"
     artists = ["spotify:artist:7sEmXHrnEnX7PScoJAvSvo", "spotify:artist:5HrFJi08nNdu50d0AQVEi0", "spotify:artist:15fZ3hlvf6rcqHls6hZAbt"]
 
-    max_speechiness = 0.3
+    min_instrumentalness = 0.5
     limit = 50
     max_energy = 0.4
 
