--- a/playlists/liked_mixes.toml
+++ b/playlists/liked_mixes.toml
@@ -1,6 +1,6 @@
 [separate]
     title = 'Blender {0}'
-    instruction = {type = "generate", amount=60, mix_same=true}
+    instruction = {type = "generate", amount=60, mix_same=true, pool_size=20}
     n = 8
     [separate.audio_sort]
         method = 'traveling'
