--- a/playlists/liked_mixes.toml
+++ b/playlists/liked_mixes.toml
@@ -4,11 +4,8 @@
     n = 8
     [separate.clear_duplicates]
         active = true
-    [separate.audio_sort]
-        method = 'traveling'
-        chunks = 25
-        random_offset = true
-        attributes = ['energy', 'valence', 'acousticness']
+    [separate.random]
+        active = true
 
 [[instructions]]
     type = "saved_tracks"
