--- a/playlists/peace.toml
+++ b/playlists/peace.toml
@@ -2,11 +2,7 @@ clear_duplicates = true
 region = 'US'
 explicit = false
 
-[audio_sort]
-    method = 'traveling'
-    chunks = 25
-    random_offset = true
-    attributes = ['energy', 'valence']
+random = true
 
 [upload]
     name = "Peace"
