--- a/playlists/sort_anime.toml
+++ b/playlists/sort_anime.toml
@@ -1,8 +1,7 @@
 clear_duplicates = true
 region = 'US'
 
-[audio_sort]
-    method = 'traveling'
+random = true
 
 [upload]
     name = 'Power of Anime'
