--- a/playlists/peace.toml
+++ b/playlists/peace.toml
@@ -13,9 +13,18 @@ trim = 75
     name = "Saved: Peace"
 
 [[instructions]]
+    type = "generate"
+    tracks = {type = "playlist_tracks", name = "Saved: Peace"}
+    pool_size = 100
+    limit = 50
+    max_energy = 0.4
+    min_instrumentalness = 0.4
+
+
+[[instructions]]
     type = "playlist_tracks"
     name = "spotify:playlist:1d2zoGmfQPuxptnd8JBayK"
-    sample = 30
+    sample = 10
 
 [[instructions]]
     # Gets recommendations for specific artists/songs
@@ -37,7 +46,7 @@ trim = 75
 
     # You can fine tune exactly what you want
     min_instrumentalness = 0.5
-    limit = 30
+    limit = 15
     pool_size = 60
     max_energy = 0.3
 
@@ -46,7 +55,7 @@ trim = 75
     type = "recommendations"
     artists = ["insaneintherainmusic"]
     max_speechiness = 0.1
-    limit = 30
+    limit = 15
     pool_size = 60
     max_energy = 0.3
 
@@ -57,7 +66,7 @@ trim = 75
     tracks = ["めぐる季節"]
     min_instrumentalness = 0.7
     pool_size = 60
-    limit = 30
+    limit = 15
     max_energy = 0.3
 
 [[instructions]]
@@ -66,7 +75,7 @@ trim = 75
     artists = ["ichika", "spotify:artist:1v7B6ZWa7QRQS3knn3Jvf4"]
     min_instrumentalness = 0.7
     pool_size = 60
-    limit = 30
+    limit = 15
     max_energy = 0.3
 
 [[instructions]]
@@ -76,5 +85,5 @@ trim = 75
     tracks = ["アシタカとサン - Piano Solo Feature"]
     min_instrumentalness = 0.6
     pool_size = 60
-    limit = 30
+    limit = 15
     max_energy = 0.3
